[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]

numpy = "1.23.2"
grpcio = "^1.49.1"
proto-plus = "^1.22.2"
click = "^7.1"  
protobuf = "^3.20.0"
python = "^3.8.1, <3.13"
streamlit = "^1.0"
# Assuming you want to keep the installations upgraded and quiet similar to pip's --upgrade --quiet options
langchain = "*"  # Using the latest version
langchain-google-vertexai = "*"  # Using the latest version
langchain-chroma = "*"  # Using the latest version
altair = "^4.0.0"  # This version or newer
streamlit-chat = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
